--- a/21/index.html
+++ b/21/index.html
@@ -27,7 +27,7 @@
                     </div>
                 </div>
                 <div id="player2-hand" class="hand" style="display: none;">
-                    <h2>Карты второго игрока:</h2>
+                    <h2>Карты соперника:</h2>
                     <ul id="player2-cards" class="cards"></ul>
                     <p>Сумма: <span id="player2-score">0</span></p>
                     <div id="player2-buttons" class="player-buttons">
