--- a/21/index.html
+++ b/21/index.html
@@ -12,6 +12,7 @@
             <h1>Выберите режим игры:</h1>
             <button id="play-with-bot">Играть с ботом</button>
             <button id="play-with-friend">Играть с другом</button>
+            <button id="rules-button">Правила игры</button> <!-- Новая кнопка -->
         </div>
         <div id="game" style="display: none;">
             <h1>Игра 21</h1>
