--- a/Сайт о себе/index.html
+++ b/Сайт о себе/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Linkov portfolio</title>
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="icon" type="image/x-icon" href="img/logo.svg">
 </head>
 
 <body>
