--- a/Сайт о себе/index.html
+++ b/Сайт о себе/index.html
@@ -35,7 +35,7 @@
                 <div class="header-text">
                     <p>with passion for learning and creating.</p>
                 </div>
-                <a href="" class="btn">Download CV</a>
+                <a href="./cv.pdf" class="btn" download="resume">Download resume</a>
             </div>
     </header>
 
